History
=======

0.7.1 (unreleased)
-------------------

0.7.0 (2010-11-04)
-------------------

- Moved z3c widget template registration for radio buttons and checkboxes 
  from ``browser/configure.zcml`` into ``widgets.zcml`` because every version 
  of z3c.form after 2.3.3 includes these template registrations and double 
  registration raises ConfigurationConflictError.  [saily] 

0.6.15 (2010-08-01)
-------------------

- import zope.app.container.interfaces; this helps for Plone 4
  compatibility.
  [maurits]

- strange issue with equality of scheduler objects adressed.
  This seems to only be an issue in python 2.6.
  This should probably be released soon since it fixes a lot
  of bugs in the ForPloneFour branch of dancing.
  [tmog]
  
- Norwegian translation. [regebro]

Version 0.6.14 - 2010-04-07
---------------------------

- Update Dutch translation.
  [maurits]

- Update French translation
  [toutpt]

Version 0.6.13 - 2009-10-19
---------------------------

- API change! Added boolean "subscribeable" to IChannel.
  [tmog]

- Added Brazilian translation 
  [lucmult]

Version 0.6.12 - 2009-06-11
---------------------------

- Optimization for clearing a MessageQueue. We now simple create a fresh
  queue instead of pull()'ing all items (pulling is quite expensive with
  CompositeQueue).
  [tmog]

- Subscription creation date is now used as que when the subscription has
  no real cue. I.e. the first time a new subscription is used.
  I was amazed to find this was not already the case.
  [tmog]

- Triggering a periodic scheduler that has a delta now always updates
  trickered_last by a product of that delta. This means the periodic
  schedulers now no longer suffer from the time "drift" that resulted
  from always saving the precise triggering time to their triggered_last
  attribute. 
  [tmog]

- Added caching of item formatting via plone.memoize.request.
  This really(!) speeds up message generation, especially when